--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -38,7 +38,7 @@
       "PLACEHOLDER": {
         "USERNAME": "Usuario",
         "EMAIL": "Correo",
-        "PASSWORD": "Password"
+        "PASSWORD": "Contraseña"
       },
       "BUTTON": {
         "LOGIN": "Ingresar",
@@ -109,7 +109,8 @@
       },
       "OPTIONS": {
         "SECTION": "Seleccione una sección",
-        "CATEGORY": "Seleccione una categoría"
+        "CATEGORY": "Seleccione una categoría",
+        "SELECT_ITEMS": "Seleccione una opción"
       }
     },
     "PUBLIC_PROFILE": {
@@ -140,15 +141,114 @@
       "PROFESSIONAL": "Profesional"
     },
     "BUTTONS": {
-      "SAVE": "Save",
-      "CANCEL": "Cancel",
+      "SAVE": "Guardar",
+      "CANCEL": "Cancelar",
       "WINK": "Wink",
       "IGNORE": "Ignorar",
       "DELETE": "Borrar",
-      "OK": "Okay"
+      "OK": "Okay",
+      "DISCARD": "Descartar",
+      "YES": "Si",
+      "NO": "No"
+    },
+    "CATEGORY": {
+      "CONTACT":	"Contacto",
+      "EDUCATION":	"Educación",
+      "LABOR":	"Laboral",
+      "MESSENGER_SERVICE":	"Mensajería",
+      "PERSONAL":	"Personal",
+      "SOCIAL_NETWORK":	"Red Social",
+      "OTHERS":	"Otros"
     },
     "ITEM_TYPES": {
-      "AVATAR": "Avatar"
+      "AVATAR": "Avatar",
+      "MOBILE": "Celular",
+      "MAIL": "Correo",
+      "WEBSITE": "Sitio web",
+      "PHONE": "Teléfono",
+      "LEVEL_OF_INSTRUCTION": "Nivel de instrucción",
+      "PROFESSION": "Profesión",
+      "COLLEGE": "Universidad",
+      "LINKEDIN": "LinkedIn",
+      "OCCUPATION": "Ocupación",
+      "JOB": "Trabajo",
+      "LINE": "Line",
+      "SKYPE": "Skype",
+      "TELEGRAM": "Telegram",
+      "WECHAT": "Wechat",
+      "WHATSAPP": "WhatsApp",
+      "NICKNAME": "Apodo",
+      "DIRECTION": "Dirección",
+      "MARITAL_STATUS": "Estado civil",
+      "BIRTHDAY": "Fecha de nacimiento",
+      "HOBBIES": "Hobbies",
+      "INTERESTS": "Intereses",
+      "FACEBOOK": "Facebook",
+      "INSTAGRAM": "Instagram",
+      "MEDIUM": "Medium",
+      "PINTEREST": "Pinterest",
+      "REDDIT": "Reddit",
+      "SNAPCHAT": "Snapchat",
+      "TUMBLR": "Tumblr",
+      "TWITTER": "Twitter",
+      "YOUTUBE": "YouTube",
+      "PERSONALIZED": "Personalizado",
+      "SEX": "Sexo",
+      "BIOGRAPHY": "Biografía",
+      "AGE": "Edad",
+      "YEARS": "años"
+    },
+    "OPTIONS_ITEMS": {
+      "PRIMARY":	"Primaria",
+      "HIGH SCHOOL":	"Secundaria",
+      "UPPER-MIDDLE":	"Media-Superior",
+      "HIGHER":	"Superior",
+
+      "MARRIED":	"Casado/a",
+      "COMMITTED":	"Comprometido/a",
+      "DIVORCED":	"Divorciado/a",
+      "IN RELATION":	"En Relación",
+      "ENGAGEMENT":	"Noviazgo",
+      "SEPARATED":	"Separado/a",
+      "SINGLE":	"Soltero/a",
+      "WIDOWER":	"Viudo/a",
+
+      "FEMILE":	"Hembra",
+      "MALE":	"Varón",
+      "OTHER":	"Otro",
+      "I_PREFER_NOT_TO_SAY":	"Prefiero no decirlo"
+    },
+    "FORMS": {
+      "ERROR": {
+        "REQUIRED":	"Campo requerido.",
+        "MAXIMUM":	"Supera el límite de caracteres.",
+        "EMAIL":	"Email inválido",
+        "URL":	"URL invalida",
+        "MINIMUM":	"No cumple con los caracteres mínimos.",
+        "CHARACTER":	"Carácter no permitido."
+      }
+    },
+    "DIALOGUES": {
+      "TITLES": {
+        "CONFIRM": "Confirmar!"
+      },
+      "MESSAGES": {
+        "CANCEL_WINK":	"¿Desea <strong>cancelar</strong> el wink?"
+      }
+    },
+    "SERVICES": {
+      "WINK_SENT":	"Wink enviado.",
+      "TRY_AGAIN_LATER":	"Intenta nuevamente más tarde.",
+      "CONTACT_SAVE":	"¡Contacto guardado!",
+      "WINK_ERROR":	"Se produjo un error inesperado al enviar el wink.",
+          
+      "SAVE_ITEMS":	"Su configuración se ha guardado correctamente.",
+      "SAVE_PHOTO":	"La foto se cargó correctamente.",
+      "SAVE_INFORMATION":	"Su información ha sido guardada con éxito.",
+          
+      "ERROR_SAVE":	"Hubo un problema al intentar guardar. intente nuevamente más tarde.",
+      "ERROR_GET_INFORMATION":	"Se ha producido un problema al intentar obtener su información. intente nuevamente más tarde.",
+      "ERROR_PHOTO":	"Hubo un problema al intentar subir tu foto."
     }
   }
 }
