--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -202,7 +202,7 @@
       "AGE": "Age",
       "YEARS": "years"
     },
-    "OPTIONS_ITEMS": {WINK.OPTIONS_ITEMS.COLLEGE
+    "OPTIONS_ITEMS": {
       "PRIMARY":	"Primary",
       "HIGH_SCHOOL":	"High school",
       "JUNIOR_COLLEGE":	"Junior college",
