--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -209,7 +209,7 @@
       "AGE": "Edad",
       "YEARS": "años"
     },
-    "OPTIONS_ITEMS": { 
+    "OPTIONS_ITEMS": {
       "PRIMARY":	"Primaria",
       "HIGH_SCHOOL":	"Secundaria",
       "JUNIOR_COLLEGE":	"Media-Superior",
@@ -242,13 +242,15 @@
       "TITLES": {
         "CONFIRM": "Confirmar!",
         "DELETE_WINK": "Borrar Wink",
-        "SAVE_CONTACTS": "Guardar contacto"
+        "SAVE_CONTACTS": "Guardar contacto",
+        "RANGE": "Rango de búsqueda"
       },
       "MESSAGES": {
         "CANCEL_WINK":	"¿Desea cancelar el wink?",
         "DELETE_WINK": "¿Estás seguro?",
         "NEW_WINK": "Tienes una nueva solicitud.",
-        "SAVE_CONTACTS": "Seleccione los elementos que desea guardar en el contacto."
+        "SAVE_CONTACTS": "Seleccione los elementos que desea guardar en el contacto.",
+        "RANGE": "Valor actual: "
       }
     },
     "SERVICES": {
@@ -256,11 +258,11 @@
       "TRY_AGAIN_LATER":	"Intenta nuevamente más tarde.",
       "CONTACT_SAVE":	"¡Contacto guardado!",
       "WINK_ERROR":	"Se produjo un error inesperado al enviar el wink.",
-          
+
       "SAVE_ITEMS":	"Su configuración se ha guardado correctamente.",
       "SAVE_PHOTO":	"La foto se cargó correctamente.",
       "SAVE_INFORMATION":	"Su información ha sido guardada con éxito.",
-          
+
       "ERROR_CONTACT_SAVE":	"Hubo un problema al intentar guardar. intente nuevamente más tarde.",
       "ERROR_GET_INFORMATION":	"Se ha producido un problema al intentar obtener su información. intente nuevamente más tarde.",
       "ERROR_PHOTO":	"Hubo un problema al intentar subir tu foto."
