--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -223,8 +223,8 @@
       "SINGLE":	"Soltero/a",
       "WIDOWER":	"Viudo/a",
 
-      "FEMILE":	"Hembra",
-      "MALE":	"Varón",
+      "FEMILE":	"Femenino",
+      "MALE":	"Masculino",
       "OTHER":	"Otro",
       "I_PREFER_NOT_TO_SAY":	"Prefiero no decirlo"
     },
@@ -258,6 +258,7 @@
       "TRY_AGAIN_LATER":	"Intenta nuevamente más tarde.",
       "CONTACT_SAVE":	"¡Contacto guardado!",
       "WINK_ERROR":	"Se produjo un error inesperado al enviar el wink.",
+      "ACTIVATE_LOCATION": "Active la ubicación de su dispositivo para continuar.",
 
       "SAVE_ITEMS":	"Su configuración se ha guardado correctamente.",
       "SAVE_PHOTO":	"La foto se cargó correctamente.",
@@ -265,7 +266,8 @@
 
       "ERROR_CONTACT_SAVE":	"Hubo un problema al intentar guardar. intente nuevamente más tarde.",
       "ERROR_GET_INFORMATION":	"Se ha producido un problema al intentar obtener su información. intente nuevamente más tarde.",
-      "ERROR_PHOTO":	"Hubo un problema al intentar subir tu foto."
+      "ERROR_PHOTO":	"Hubo un problema al intentar subir tu foto.",
+      "UNEXPECTED_ERROR": "Ha ocurrido un error inesperado al intentar realizar esta acción."
     },
     "TOUR": {
       "HOME": {
