inicio de interceptor para sesion cerrada

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -78,7 +78,8 @@
         "PHONE_NUMBER": "Phone Number",
         "BIRTHDAY": "Birthday",
         "GENDER": "Gender",
-        "AUTOSAVE_CONTACTS": "Autosave contacts"
+        "AUTOSAVE_CONTACTS": "Autosave contacts",
+        "AVATAR": "Select an image to continue."
       }
     },
     "HOME": {
