evitar espacios en blanco y clase photo

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -230,7 +230,8 @@
         "EMAIL":	"Invalid email.",
         "URL":	"Invalid URL.",
         "MINIMUM":	"Does not meet the minimum characters.",
-        "CHARACTER":	"Character not allowed."
+        "CHARACTER":	"Character not allowed.",
+        "WHITE_SPACE": "Please enter valid data."
       }
     },
     "DIALOGUES": {
