--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -236,7 +236,8 @@
         "EMAIL":	"Email inválido",
         "URL":	"URL invalida",
         "MINIMUM":	"No cumple con los caracteres mínimos.",
-        "CHARACTER":	"Carácter no permitido."
+        "CHARACTER":	"Carácter no permitido.",
+        "WHITE_SPACE": "Por favor, introduzca datos válidos."
       }
     },
     "DIALOGUES": {
